--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/rajeev29five/rajeev29five.github.io">View on GitHub</a>
 
           <h1 id="project_title">Most Frequently Used Linux/UNIX Commands</h1>
           <h2 id="project_tagline"></h2>
