--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	  <div class="col-sm-6">
 	    <div class="card">
 	      <div class="card-body">
-	        <a href="_site/command-line.html"><h5 class="card-title">Command Line</h5></a>
+	        <a href="command-line.html"><h5 class="card-title">Command Line</h5></a>
 	        <p class="card-text">Learn about what Command Line is and some of the most frequently used Linux/Unix commands with the help of examples.</p>
 	      </div>
 	    </div>
