--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	  <div class="col-sm-6">
 	    <div class="card">
 	      <div class="card-body">
-	        <a href=""><h5 class="card-title">First Things First, Installation!</h5></a>
+	        <h5 class="card-title"><a href="">First Things First, Installation!</a></h5>
 	        <p class="card-text">Which Linux distro is best for you and how to install them on your system ?</p>
 	      </div>
 	    </div>
@@ -27,7 +27,7 @@
 	  <div class="col-sm-6">
 	    <div class="card">
 	      <div class="card-body">
-	        <a href="command-line.html"><h5 class="card-title">Command Line</h5></a>
+	        <h5 class="card-title"><a href="command-line.html">Command Line</a></h5>
 	        <p class="card-text">Learn about what Command Line is and some of the most frequently used Linux/Unix commands with the help of examples.</p>
 	      </div>
 	    </div>
