--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 	<head>
 		<meta charset='utf-8'>
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="viewport" content="width=device-width,maximum-scale=2">
-    	<link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css">
-    	<link rel="stylesheet" type="text/css" href="/assets/css/custom-style.css">
+    	<link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css" media="screen">
+    	<link rel="stylesheet" type="text/css" href="/assets/css/custom-style.css" media="screen">
     	<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark p4">
 		<div class="container">
-			<a class="navbar-brand  mx-auto" href="#">Explore The World of Linux</a>			
+			<p id="nav-text">Explore The World of Linux</p>			
 		</div>
 	</nav>
 	<div class="container p4">
