--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark p4">
 		<div class="container">
-			<p id="nav-text">Explore The World of Linux</p>			
+			<p class="nav-text">Explore The World of Linux</p>			
 		</div>
 	</nav>
 	<div class="container p4">
