--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en-US">
 	<head>
 		<meta charset='utf-8'>
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    	<meta name="viewport" content="width=device-width,maximum-scale=2">
-    	<link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css" media="screen">
-    	<link rel="stylesheet" type="text/css" href="/assets/css/custom-style.css" media="screen">
-    	<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+  	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+  	<meta name="viewport" content="width=device-width,maximum-scale=2">
+  	<link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css" media="screen">
+  	<link rel="stylesheet" type="text/css" href="/assets/css/custom-style.css" media="screen">
+  	<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+		<title>Explore The World of Linux</title>
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark p4">
 		<div class="container">
-			<p class="nav-text">Explore The World of Linux</p>			
+			<p class="nav-text">Explore The World of Linux</p>
 		</div>
 	</nav>
 	<div class="container p4">
@@ -19,7 +20,7 @@
 	  <div class="col-sm-6">
 	    <div class="card">
 	      <div class="card-body">
-	        <h5 class="card-title"><a href="#" target="_blank">First Things First, Installation!</a></h5>
+	        <h5 class="card-title"><a href="#" target="">First Things First, Installation!</a></h5>
 	        <p class="card-text">Which Linux distro is best for you and how to install them on your system ?</p>
 	      </div>
 	    </div>
