--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	  <div class="col-sm-6">
 	    <div class="card">
 	      <div class="card-body">
-	        <h5 class="card-title"><a href="#" target="">First Things First, Installation!</a></h5>
+	        <h5 class="card-title"><a href="installation.html">First Things First, Installation!</a></h5>
 	        <p class="card-text">Which Linux distro is best for you and how to install them on your system ?</p>
 	      </div>
 	    </div>
