--- a/index.html
+++ b/index.html
@@ -35,5 +35,25 @@
 	  </div>
 	</div>
 	</div>
+	<!-- <div class="container p4">
+	<div class="row">
+	  <div class="col-sm-6">
+	    <div class="card">
+	      <div class="card-body">
+	        <h5 class="card-title"><a href="crontab.html">Crontab</a></h5>
+	        <p class="card-text">Which Linux distro is best for you and how to install them on your system ?</p>
+	      </div>
+	    </div>
+	  </div>
+	  <div class="col-sm-6">
+	    <div class="card">
+	      <div class="card-body">
+	        <h5 class="card-title"><a href="command-line.html" target="_blank">Command Line</a></h5>
+	        <p class="card-text">Learn about what Command Line is and some of the most frequently used Linux/Unix commands with the help of examples.</p>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+	</div> -->
 	</body>
 </html>
