--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 		<meta charset='utf-8'>
   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   	<meta name="viewport" content="width=device-width,maximum-scale=2">
-  	<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet"> 
   	<link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css" media="screen">
  	<link rel="stylesheet" type="text/css" href="/assets/css/aboutme.css" media="screen">
 	<title>About Me</title>
