--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset='utf-8'>
   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   	<meta name="viewport" content="width=device-width,maximum-scale=2">
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   	<link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css" media="screen">
   	<link rel="stylesheet" type="text/css" href="/assets/css/custom-style.css" media="screen">
   	<link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
@@ -11,10 +12,10 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark p4">
-		<div class="container">
-			<p class="nav-text">Explore The World of Linux</p>
-		</div>
-	</nav>
+			<div class="container">
+				<p class="nav-text">Explore The World of Linux</p>
+			</div>
+		</nav>
 	<div class="container p4">
 	<div class="row">
 	<!--   <div class="col-sm-6">
