Got top, target & back to home
Add a go to top button in the default layout
Add a link to go back to the main page (a bit ugly?
 :thinking: maybe it could be enhanced)
Remove target blank from the index page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	  <div class="col-sm-6">
 	    <div class="card">
 	      <div class="card-body">
-	        <h5 class="card-title"><a href="command-line.html" target="_blank">Command Line</a></h5>
+	        <h5 class="card-title"><a href="command-line.html">Command Line</a></h5>
 	        <p class="card-text">Learn about what Command Line is and some of the most frequently used Linux/Unix commands with the help of examples.</p>
 	      </div>
 	    </div>
